# NeST-S6

./: README.md  pyproject.toml
nest_s6/: __init__.py  model.py
nest_s6.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
